--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".StarMapApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,7 +32,7 @@
 
         <activity
             android:name="edu.stanford.qiwen.starmap.CreateMapActivity"
-            android:label="@string/title_activity_create_map"></activity>
+            android:label="@string/title_activity_create_map" />
         <activity
             android:name="edu.stanford.qiwen.starmap.DisplayMapActivity"
             android:label="@string/title_activity_display_map" />
